# nodding

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
data/output/: nod_detection_results.csv
nodding/: cli.py  nods.py  pose.py  util.py  video.py
tests/: test_nod.py
